--- a/themes/tsd/css/style.css
+++ b/themes/tsd/css/style.css
@@ -17,6 +17,7 @@ body
 	padding: 0;
 	font-family: Tahoma, Geneva, sans-serif;
 	text-align: center;
+	background-color: #F7F4F0;
 }
 
 #header
@@ -89,13 +90,14 @@ p#slogan
 
 #content-wrapper
 {
-	width: 900px;
+	width: 100%;
 	min-height: 400px;
 	height: auto !important;
 	margin: 0 auto;
 	padding: 25px 0;
 	text-align: left;
 	font-size: 80%;
+	background-color: #fff;
 }
 
 #main
