--- a/themes/tsd/css/style.css
+++ b/themes/tsd/css/style.css
@@ -134,19 +134,19 @@ h1#page-title, .content h2
 	font-size: 150%;
 }
 
-.item-list, .view-content
+.item-list .pager
 {
 	margin-top: 30px;
 }
 
-.item-list ul 
+.item-list ul, .item-list ul li
 {
 	list-style: none outside none;
 }
 
 .views-row
 {
-	margin-bottom: 40px;
+	margin-top: 40px;
 }
 
 #sidebar-right
