--- a/themes/tsd/css/style.css
+++ b/themes/tsd/css/style.css
@@ -180,7 +180,7 @@ h1#page-title, .content h2
 
 #sidebar-right ul li.views-row 
 {
-	padding-bottom: 0;
+	padding-bottom: 4px;
 }
 
 #sidebar-right div.content
