--- a/themes/tsd/css/style.css
+++ b/themes/tsd/css/style.css
@@ -178,7 +178,7 @@ h1#page-title, .content h2
 
 #sidebar-right ul li.views-row 
 {
-	padding-bottom: 4px;
+	padding: 5px 0;
 }
 
 #sidebar-right div.content
