some css for client pages

--- a/drupal/sites/all/themes/tsd/css/style.css
+++ b/drupal/sites/all/themes/tsd/css/style.css
@@ -273,13 +273,13 @@ h1#page-title, .content h2
 
 .field-field-quote
 {
+	background-color: #E7E9E8;
 	float: right;
+	font-style: italic;
+	margin: 0;
+	padding: 0 20px;
+	width: 200px;
 }	
-	
-	
-	
-	
-	
 	
 	
 	
