better spacing for quote

--- a/drupal/sites/all/themes/tsd/css/style.css
+++ b/drupal/sites/all/themes/tsd/css/style.css
@@ -276,7 +276,7 @@ h1#page-title, .content h2
 	background-color: #E7E9E8;
 	float: right;
 	font-style: italic;
-	margin: 0;
+	margin: 0px 0px 20px 20px;
 	padding: 0 20px;
 	width: 200px;
 }	
